# SlicerUltrasound

./: .gitignore  Makefile  diff.txt  run_all_tests.py
AdjudicateUltrasound/: AdjudicateUltrasound.py  CMakeLists.txt
AnnotateUltrasound/: AnnotateUltrasound.py
AnnotateUltrasound/Resources/UI/: AnnotateUltrasound.ui
AnnotateUltrasound/Testing/Python/: test_dicom_loading.py  test_free_markup_nodes.py  test_line_selection_copy_paste.py  test_memory_cycling.py
AnonymizeUltrasound/: AnonymizeUltrasound.py  CMakeLists.txt
AnonymizeUltrasound/Resources/UI/: AnonymizeUltrasound.ui
AnonymizeUltrasound/common/: compare_masks.py  create_frames.py  create_masks.py  dcm_inference.py  debug.py  dicom_file_manager.py  dicom_processor.py  evaluation.py  inference.py  log_management.py  logging.py  logging_utils.py  overview_generator.py  slicer_anonymizer.py  uid_remap.py
AnonymizeUltrasound/common/tests/: test_dicom_file_manager.py  test_dicom_processor.py  test_uid_remap.py
AnonymizeUltrasound/scripts/: README.md  auto_anonymize.md  auto_anonymize.py  batch_auto_anonymize.sh  batch_model_eval.sh  model_eval.py  requirements-gpu.txt  requirements.txt
docs/: debugging.md  local_dev_and_testing.md
scripts/: annotation_merging_workflow.md
